# Travel-Thai

./: .gitignore  README.md  pyproject.toml
app/: crud.py  database.py  db_models.py  main.py
app/auth/: security.py
app/models/: campaign.py  user.py
app/routers/: campaign.py  users.py
app/services/: province_service.py
scripts/: run-api-dev
tests/: test_api.py
